--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "elasticsearch": "^16.7.2",
     "express": "^4.17.2",
     "jsonwebtoken": "^8.5.1",
