--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "es7": "npm:@elastic/elasticsearch@^7.17.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
